[gd_scene load_steps=7 format=3 uid="uid://bjbkn1revra71"]

[ext_resource type="Script" path="res://scenes/main_scene/main_scene.gd" id="1_oyh4y"]
[ext_resource type="Texture2D" uid="uid://b10we274quci6" path="res://assets/controlls/arrow-right-solid.svg" id="2_8gl78"]
[ext_resource type="Texture2D" uid="uid://bs33kxhvxebgv" path="res://assets/pearl_harvesting/pearl_harvesting.png" id="2_hl0wh"]
[ext_resource type="Texture2D" uid="uid://1cunfuogxc24" path="res://assets/pearl_cleaning/pearl_cleaning_background.png" id="2_iri82"]
[ext_resource type="Texture2D" uid="uid://dbytmx4aqr7dw" path="res://assets/peal_shop/shop_background.png" id="3_e43qg"]
[ext_resource type="Script" path="res://Scripts/Interactables.cs" id="3_rfoeh"]

[node name="MainScene" type="Node2D"]
script = ExtResource("1_oyh4y")

[node name="Camera2D" type="Camera2D" parent="."]
position = Vector2(-576, 324)
position_smoothing_enabled = true

[node name="Background" type="Sprite2D" parent="."]

[node name="PearlHarvesting" type="Sprite2D" parent="Background"]
position = Vector2(-576, 324)
texture = ExtResource("2_hl0wh")

[node name="PearlCleaning" type="Sprite2D" parent="Background"]
position = Vector2(576, 324)
texture = ExtResource("2_iri82")

[node name="Shop" type="Sprite2D" parent="Background"]
position = Vector2(1728, 324)
texture = ExtResource("3_e43qg")

[node name="Control" type="Node2D" parent="."]

[node name="1to2Button" type="Button" parent="Control"]
offset_left = 1059.0
offset_top = 272.0
offset_right = 1515.0
offset_bottom = 792.0
scale = Vector2(0.2, 0.2)
icon = ExtResource("2_8gl78")

[node name="2to1Button" type="Button" parent="Control"]
offset_left = 1246.0
offset_top = 376.0
offset_right = 1702.0
offset_bottom = 896.0
rotation = -3.14159
scale = Vector2(0.2, 0.2)
icon = ExtResource("2_8gl78")

[node name="1to3Button" type="Button" parent="Control"]
offset_left = 92.0
offset_top = 376.0
offset_right = 548.0
offset_bottom = 896.0
rotation = -3.14159
scale = Vector2(0.2, 0.2)
icon = ExtResource("2_8gl78")

[node name="3to1Button" type="Button" parent="Control"]
offset_left = -92.0
offset_top = 272.0
offset_right = 364.0
offset_bottom = 792.0
scale = Vector2(0.2, 0.2)
icon = ExtResource("2_8gl78")

[node name="Interactables" type="Node2D" parent="."]
script = ExtResource("3_rfoeh")

[node name="PearlFarming" type="Button" parent="Interactables"]
offset_left = -663.0
offset_top = 231.0
offset_right = -492.0
offset_bottom = 408.0

[node name="PearlCleaning" type="Button" parent="Interactables"]
offset_left = 481.0
offset_top = 229.0
offset_right = 682.0
offset_bottom = 430.0

[node name="PearlShop" type="Button" parent="Interactables"]
offset_left = 1604.0
offset_top = 261.0
offset_right = 1866.0
offset_bottom = 455.0

[connection signal="pressed" from="Control/1to2Button" to="." method="one_to_two_button_pressed"]
[connection signal="pressed" from="Control/2to1Button" to="." method="two_to_one_button_pressed"]
[connection signal="pressed" from="Control/1to3Button" to="." method="one_to_three_button_pressed"]
[connection signal="pressed" from="Control/3to1Button" to="." method="three_to_one_button_pressed"]
[connection signal="pressed" from="Interactables/PearlFarming" to="Interactables" method="OnPearlClicked"]
[connection signal="pressed" from="Interactables/PearlCleaning" to="Interactables" method="OnPearlCleaningClicked"]
[connection signal="pressed" from="Interactables/PearlShop" to="Interactables" method="OnPearlShopClicked"]
